docs/src/components/pages/Tokens/TokensContent/TokensContent.css
.tokens-content-container {
	height: calc(100% - 28px - 36px - 24px - 24px);
}

.tokens-content-list {
	height: calc(100% - 33px - 1.5rem);
	overflow-y: auto;
	padding-bottom: 1.5rem;
}

.tokens-content-header, .tokens-content-item {
	display: flex;
}

.tokens-content-header > div:nth-child(1), .tokens-content-header > div:nth-child(2),
.tokens-content-item > div:nth-child(1), .tokens-content-item > div:nth-child(2){
	padding-right: 20px;
}

.tokens-content-header > div:nth-child(1), .tokens-content-item > div:nth-child(1) {
	flex-basis: 35%;
}

.tokens-content-header > div:nth-child(2), .tokens-content-item > div:nth-child(2) {
	flex-basis: 25%;
}

.tokens-content-header > div:nth-child(3), .tokens-content-item > div:nth-child(3) {
	flex-basis: 40%;
}

.tokens-content-header span {
	color: var(--text_secondary);
}

.tokens-content-item {
	padding: 10px 0;
}

.token-name-btn {
	background-color: var(--content_warning_background);
	border-radius: 0.5rem;
}

.token-name-btn .vkuiButton__content {
	font-weight: var(--vkui--font_weight_accent3);
	font-size: var(--vkui--font_text--font_size--compact);
	line-height: var(--vkui--font_paragraph--line_height--regular);
	padding-right: var(--vkui--size_button_tertiary_small_padding_horizontal--regular);
}

.token-name-btn .vkuiButton__after {
	display: none;
}

.token-name-btn_hover {
	background-color: #FFEABD;
}

.token-name-btn_hover .vkuiButton__content {
	padding-right: 0;
}

.token-name-btn_hover .vkuiButton__after {
	display: block;
}

.separator-header {
	margin: 12px 0 0;
}

.separator-item {
	color: var(--separator_alternate);
}

@media screen and (max-width: 1024px) {
	.tokens-content-container {
		height: calc(100% - 68px - 232px - 16px - 16px);
	}

	.tokens-content-list {
		height: calc(100% - 1px - 0.5rem);
		padding-bottom: 0.5rem;
	}

	.separator-header {
		color: var(--separator_alternate);
		width: calc(100% + 2rem);
		margin: 0 0 0 -1rem;
	}

	.tokens-content-item {
		padding: 16px 0 20px;
		display: block;
	}

	.tokens-content-item > div:nth-child(1) {
		padding-right: 0;
	}

	.tokens-content-item > div:nth-child(3) {
		padding-right: 20px;
	}

	.tokens-content-item > *:not(:first-child) {
		margin-top: 12px;
	}

	.token-name-btn {
		min-height: var(--vkui--size_button_medium_height--regular);
	}

	.token-name-btn .vkuiButton__after {
		display: block;
	}

	.token-name-btn .vkuiButton__in {
		justify-content: space-between;
	}
}

